--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
         - 'HasWeapon(tbd)': 'TBD.md'
         - 'RelationTo(tbd)': 'TBD.md'
         - 'Relation(tbd)': 'TBD.md'
-        - 'Name(tbd)': 'TBD.md'
+        - 'Name': 'name.md'
         - 'Ammo(tbd)': 'TBD.md'
         - 'Ignore(tbd)': 'TBD.md'
         - 'Karma(tbd)': 'TBD.md'
