--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,73 +4,73 @@ site_description: Postal3Script
 copyright: Written by Kizoky and Pseudonym_Tim <br>© Whackjob Interactive 2022<br>ㅤ
 site_url: https://kizoky.github.io/postal3script
 nav:
-    - 'Postal3Script':
+    - 'Postal3Script (WIP)':
         - 'What is Postal3Script?': 'index.md'
-        - 'Structure(tbd)': 'TBD.md'
-        - 'States(tbd)': 'TBD.md'
-        - 'Patterns(tbd)': 'TBD.md'
-        - 'Blocks(tbd)': 'TBD.md'
-        - 'Events(tbd)': 'TBD.md'
+        - 'Structure (TBD)': 'TBD.md'
+        - 'States (TBD)': 'TBD.md'
+        - 'Patterns (TBD)': 'TBD.md'
+        - 'Blocks (TBD)': 'TBD.md'
+        - 'Events (TBD)': 'TBD.md'
     - 'Attribute Checking':
         - 'IfAttr, SetAttr, CheckAttr, ChangeAttr, RemoveAttr': 'attributes.md'
         - 'Embedded Attributes': 'embedattributes.md'
-    - 'Object Categories':
+    - 'Object Categories (WIP)':
         - 'Manner': 'manner.md'
         - 'Faction': 'faction.md'
-        - 'ItemType(tbd)': 'TBD.md'
-        - 'String(tbd)': 'TBD.md'
-        - 'Timer(tbd)': 'TBD.md'
+        - 'ItemType (TBD)': 'TBD.md'
+        - 'String (TBD)': 'TBD.md'
+        - 'Timer (TBD)': 'TBD.md'
         - 'Object': 'object.md'
         - 'DistTo': 'distto.md'
-        - 'AngleTo(tbd)': 'TBD.md'
+        - 'AngleTo (TBD)': 'TBD.md'
         - 'Visible': 'visible.md'
-        - 'HasWeapon(tbd)': 'TBD.md'
-        - 'RelationTo(tbd)': 'TBD.md'
-        - 'Relation(tbd)': 'TBD.md'
+        - 'HasWeapon (TBD)': 'TBD.md'
+        - 'RelationTo (TBD)': 'TBD.md'
+        - 'Relation (TBD)': 'TBD.md'
         - 'Name': 'name.md'
-        - 'Ammo(tbd)': 'TBD.md'
-        - 'Ignore(tbd)': 'TBD.md'
-        - 'Karma(tbd)': 'TBD.md'
+        - 'Ammo (TBD)': 'TBD.md'
+        - 'Ignore (TBD)': 'TBD.md'
+        - 'Karma (TBD)': 'TBD.md'
         - 'VoicePrefix': 'voiceprefix.md'
     - 'Functions (WIP)':
-        - 'Effect': 'TBD.md'
+        - 'Effect (TBD)': 'TBD.md'
         - 'Say': 'say.md'
-        - 'FireEvent, FireEventEX, FireUser, FireInput, AreaEvent, EntFireUser, EntFireInput': 'TBD.md'
-        - 'State, Pattern, ExecutePattern': 'TBD.md'
-        - 'SetSquad, SetSquadRelation, RemoveSquadRelation, RallySquad, DesertSquad': 'TBD.md'
-        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea': 'TBD.md'
-        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetAnchor, TargetVehicle, TargetHostage, TargetCrosshair, TargetEntByName, ResetTarget, IgnoreTarget, SetTarget': 'TBD.md'
-        - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem, SendTarget2Caller': 'TBD.md'
-        - 'SetActPack': 'TBD.md'
-        - 'FreeMovement, FreeMovementParams, MoveToLean, MoveToTarget, MoveToTargetLKP, MoveToNode': 'TBD.md'
-        - 'Wait, WaitForEnd, Repeat': 'TBD.md'
-        - 'Gesture, ResetGesture, ResetSequence': 'TBD.md'
-        - 'Turn, TurnSpeed': 'TBD.md'
-        - 'Aim, Senses, Snatch, Unsnatch, Crouch, Face, Lean, Follow, LookAt, HolsterWeapon, Anchor, Busy, Fear, Hate, CatDervish, PlayerFriendly, LookOut': 'TBD.md'
-        - 'Headblob': 'TBD.md'
-        - 'StateMatrix': 'TBD.md'
-        - 'CallState, CallPattern': 'TBD.md'
-        - 'EmitSound': 'TBD.md'
-        - 'Item, SpawnItem': 'TBD.md'
-        - 'Weapon, Reload, ThrowGrenade': 'TBD.md'
-        - 'Relationship': 'TBD.md'
-        - 'EnterVehicle': 'TBD.md'
-        - 'Hit': 'TBD.md'
-        - 'Arm': 'TBD.md'
-        - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS': 'TBD.md'
-        - 'NPC': 'TBD.md'
-        - 'Push': 'TBD.md'
-        - 'StunOut': 'TBD.md'
-        - 'EnableGibs': 'TBD.md'
-        - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'TBD.md'
-        - 'TravelByPathTrack': 'TBD.md'
-        - 'AddFluid': 'TBD.md'
+        - 'FireEvent, FireEventEX, FireUser, FireInput, AreaEvent, EntFireUser, EntFireInput (TBD)': 'TBD.md'
+        - 'State, Pattern, ExecutePattern (TBD)': 'TBD.md'
+        - 'SetSquad, SetSquadRelation, RemoveSquadRelation, RallySquad, DesertSquad (TBD)': 'TBD.md'
+        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea (TBD)': 'TBD.md'
+        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetAnchor, TargetVehicle, TargetHostage, TargetCrosshair, TargetEntByName, ResetTarget, IgnoreTarget, SetTarget (TBD)': 'TBD.md'
+        - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem, SendTarget2Caller (TBD)': 'TBD.md'
+        - 'SetActPack (TBD)': 'TBD.md'
+        - 'FreeMovement, FreeMovementParams, MoveToLean, MoveToTarget, MoveToTargetLKP, MoveToNode (TBD)': 'TBD.md'
+        - 'Wait, WaitForEnd, Repeat (TBD)': 'TBD.md'
+        - 'Gesture, ResetGesture, ResetSequence (TBD)': 'TBD.md'
+        - 'Turn, TurnSpeed (TBD)': 'TBD.md'
+        - 'Aim, Senses, Snatch, Unsnatch, Crouch, Face, Lean, Follow, LookAt, HolsterWeapon, Anchor, Busy, Fear, Hate, CatDervish, PlayerFriendly, LookOut (TBD)': 'TBD.md'
+        - 'Headblob (TBD)': 'TBD.md'
+        - 'StateMatrix (TBD)': 'TBD.md'
+        - 'CallState, CallPattern (TBD)': 'TBD.md'
+        - 'EmitSound (TBD)': 'TBD.md'
+        - 'Item, SpawnItem (TBD)': 'TBD.md'
+        - 'Weapon, Reload, ThrowGrenade (TBD)': 'TBD.md'
+        - 'Relationship (TBD)': 'TBD.md'
+        - 'EnterVehicle (TBD)': 'TBD.md'
+        - 'Hit (TBD)': 'TBD.md'
+        - 'Arm (TBD)': 'TBD.md'
+        - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS (TBD)': 'TBD.md'
+        - 'NPC (TBD)': 'TBD.md'
+        - 'Push (TBD)': 'TBD.md'
+        - 'StunOut (TBD)': 'TBD.md'
+        - 'EnableGibs (TBD)': 'TBD.md'
+        - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern (TBD)': 'TBD.md'
+        - 'TravelByPathTrack (TBD)': 'TBD.md'
+        - 'AddFluid (TBD)': 'TBD.md'
     - 'Mission Functions (WIP)':
-        - 'AttributeProgressBar': 'TBD.md'
-        - 'MissionLog, MissionSave, MissionBriefing': 'TBD.md'
-        - 'ShowMessage, ShowHint': 'TBD.md'
-        - 'EndMission': 'TBD.md'
-        - 'PlayerKarma': 'TBD.md'
-        - 'PlayVideo': 'TBD.md'
-        - 'OpenDialog (YesNo)': 'TBD.md'
+        - 'AttributeProgressBar (TBD)': 'TBD.md'
+        - 'MissionLog, MissionSave, MissionBriefing (TBD)': 'TBD.md'
+        - 'ShowMessage, ShowHint (TBD)': 'TBD.md'
+        - 'EndMission (TBD)': 'TBD.md'
+        - 'PlayerKarma (TBD)': 'TBD.md'
+        - 'PlayVideo (TBD)': 'TBD.md'
+        - 'OpenDialog  (TBD)': 'TBD.md'
 theme: readthedocs
