--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ nav:
         - 'EnableGibs (TBD)': 'TBD.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern (TBD)': 'TBD.md'
         - 'TravelByPathTrack (TBD)': 'TBD.md'
-        - 'AddFluid (TBD)': 'TBD.md'
+        - 'AddFluid': 'addfluid.md'
     - 'Mission Functions':
         - 'AttributeProgressBar': 'attributeprogressbar.md'
         - 'MissionLog, MissionSave, MissionBriefing': 'missionlog_save_briefing.md'
