--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ nav:
         - 'Arm (TBD)': 'TBD.md'
         - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS (TBD)': 'TBD.md'
         - 'NPC (TBD)': 'TBD.md'
-        - 'Push (TBD)': 'TBD.md'
+        - 'Push': 'push.md'
         - 'StunOut': 'stunout.md'
         - 'EnableGibs': 'enablegibs.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
