--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,6 @@ nav:
         - 'Relationship (TBD)': 'TBD.md'
         - 'EnterVehicle (TBD)': 'TBD.md'
         - 'Hit (TBD)': 'TBD.md'
-        - 'Arm (TBD)': 'TBD.md'
         - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS': 'assisttarget_enemy.md'
         - 'NPC': 'NPC.md'
         - 'Push': 'push.md'
@@ -73,4 +72,6 @@ nav:
         - 'PlayerKarma': 'playerkarma.md'
         - 'PlayVideo': 'playvideo.md'
         - 'OpenDialog': 'opendialog.md'
+    - 'Deleted Functions':
+        - 'Arm': 'arm.md'
 theme: readthedocs
