Moved attack funcs to their own category

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,18 +52,19 @@ nav:
         - 'CallState, CallPattern (TBD)': 'TBD.md'
         - 'EmitSound (TBD)': 'TBD.md'
         - 'Item, SpawnItem (TBD)': 'TBD.md'
-        - 'Weapon, Reload, ThrowGrenade (TBD)': 'TBD.md'
         - 'Relationship (TBD)': 'TBD.md'
         - 'EnterVehicle (TBD)': 'TBD.md'
-        - 'Hit': 'hit.md'
         - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS': 'assisttarget_enemy.md'
         - 'NPC': 'NPC.md'
-        - 'Push': 'push.md'
         - 'StunOut': 'stunout.md'
         - 'EnableGibs': 'enablegibs.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
         - 'TravelByPathTrack': 'travelbypathtrack.md'
         - 'AddFluid': 'addfluid.md'
+    - 'Attack Functions':
+        - 'Hit': 'hit.md'
+        - 'Push': 'push.md'
+        - 'Weapon, Reload, ThrowGrenade (TBD)': 'TBD.md'
     - 'Mission Functions':
         - 'AttributeProgressBar': 'attributeprogressbar.md'
         - 'MissionLog, MissionSave, MissionBriefing': 'missionlog_save_briefing.md'
