--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ nav:
         - 'EnableGibs': 'enablegibs.md'
         - 'AddFluid': 'addfluid.md'
     - '-- State Functions --':
-        - 'State, Pattern, ExecutePattern (TBD)': 'TBD.md'
+        - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat (TBD)': 'TBD.md'
         - 'StateMatrix (TBD)': 'TBD.md'
         - 'CallState, CallPattern (TBD)': 'TBD.md'
