--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ nav:
         - 'AddFluid': 'addfluid.md'
     - '-- State Functions --':
         - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
-        - 'Wait, WaitForEnd, Repeat (TBD)': 'TBD.md'
+        - 'Wait, WaitForEnd, Repeat': 'wait_waitforend_repeat.md'
         - 'StateMatrix (TBD)': 'TBD.md'
         - 'CallState, CallPattern (TBD)': 'TBD.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
