--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,7 +55,7 @@ nav:
         - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'wait_waitforend_repeat.md'
         - 'StateMatrix (TBD)': 'TBD.md'
-        - 'CallState, CallPattern (TBD)': 'TBD.md'
+        - 'CallState, CallPattern': 'callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
     - '-- Movement Functions --':
         - 'TravelByPathTrack': 'travelbypathtrack.md'
