--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ nav:
     - '-- State Functions --':
         - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'wait_waitforend_repeat.md'
-        - 'StateMatrix (TBD)': 'TBD.md'
+        - 'StateMatrix': 'statematrix.md'
         - 'CallState, CallPattern': 'callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
     - '-- Movement Functions --':
