--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,12 +58,12 @@ nav:
         - 'CallState, CallPattern': 'callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
     - '-- Movement Functions --':
-        - 'Move (TBD)': 'TBD.md'
+        - 'Move, MoveToLean, MoveToTarget, MoveToTargetLKP, MoveToNode (TBD)': 'TBD.md'
+        - 'FreeMovement, FreeMovementParams (TBD)': 'TBD.md'
         - 'TravelByPathTrack': 'travelbypathtrack.md'
-        - 'Turn, TurnSpeed': 'turn_turnspeed.md'
-        - 'FreeMovement, FreeMovementParams, MoveToLean, MoveToTarget, MoveToTargetLKP, MoveToNode (TBD)': 'TBD.md'
-        - 'SetActPack (TBD)': 'TBD.md'
         - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea (TBD)': 'TBD.md'
+        - 'Turn, TurnSpeed': 'turn_turnspeed.md'
+        - 'SetActPack (TBD)': 'TBD.md'
     - '-- Attack Functions --':
         - 'Hit': 'hit.md'
         - 'Push': 'push.md'
