--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,16 +37,24 @@ nav:
         - 'FireEvent, FireEventEX, FireUser, FireInput, AreaEvent, EntFireUser, EntFireInput (TBD)': 'TBD.md'
         - 'Item, SpawnItem (TBD)': 'TBD.md'
         - 'AddFluid': 'addfluid.md'
+        - 'Anchor, TargetAnchor (TBD)': 'TBD.md'
     - '-- NPC Functions --':
         - 'Say': 'say.md'
+        - 'EmitSound (TBD)': 'TBD.md'
         - 'Gesture, ResetGesture, ResetSequence (TBD)': 'TBD.md'
         - 'NPC': 'NPC.md'
         - 'StunOut': 'stunout.md'
         - 'EnableGibs': 'enablegibs.md'
-        - 'Aim, Senses, Snatch, Unsnatch, Crouch, Face, Lean, Follow, LookAt, HolsterWeapon, Anchor, Busy, Fear, Hate, CatDervish, PlayerFriendly, LookOut (TBD)': 'TBD.md'
         - 'Headblob (TBD)': 'TBD.md'
-        - 'EmitSound (TBD)': 'TBD.md'
         - 'EnterVehicle (TBD)': 'TBD.md'
+    - '-- NPC Behavior Functions --':
+        - 'Aim, Face (TBD)': 'TBD.md'
+        - 'Snatch, Unsnatch (TBD)': 'TBD.md'
+        - 'Senses, LookAt, LookOut (TBD)': 'TBD.md'
+        - 'Crouch, Lean (TBD)': 'TBD.md'
+        - 'Busy, Fear, Hate (TBD)': 'TBD.md'
+        - 'Follow, PlayerFriendly (TBD)': 'TBD.md'
+        - 'CatDervish (TBD)': 'TBD.md'
     - '-- State Functions --':
         - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'wait_waitforend_repeat.md'
@@ -57,7 +65,7 @@ nav:
         - 'SetSquad, SetSquadRelation, RemoveSquadRelation (TBD)': 'TBD.md'
         - 'RallySquad, DesertSquad (TBD)': 'TBD.md'
     - '-- Targeting Functions --':
-        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetAnchor, TargetVehicle, TargetHostage, TargetCrosshair, TargetEntByName, ResetTarget, IgnoreTarget, SetTarget (TBD)': 'TBD.md'
+        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetVehicle, TargetHostage, TargetCrosshair, TargetEntByName, ResetTarget, IgnoreTarget, SetTarget (TBD)': 'TBD.md'
         - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem, SendTarget2Caller (TBD)': 'TBD.md'
         - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget, CheckTarget, CheckLOS': 'assisttarget_enemy.md'
         - 'Relationship (TBD)': 'TBD.md'
@@ -72,6 +80,7 @@ nav:
         - 'Hit': 'hit.md'
         - 'Push': 'push.md'
         - 'Weapon, Reload, ThrowGrenade': 'weapon_reload_throwgrenade.md'
+        - 'HolsterWeapon (TBD)': 'TBD.md'
     - '-- Mission Functions --':
         - 'AttributeProgressBar': 'attributeprogressbar.md'
         - 'MissionLog, MissionSave, MissionBriefing': 'missionlog_save_briefing.md'
