--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ nav:
         - 'Move, MoveToLean, MoveToTarget, MoveToTargetLKP': 'movement_funcs.md'
         - 'FreeMovement, FreeMovementParams (TBD)': 'TBD.md'
         - 'TravelByPathTrack': 'travelbypathtrack.md'
-        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea (TBD)': 'TBD.md'
+        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea': 'sethint_area_leangroup_avoidarea.md'
         - 'Turn, TurnSpeed': 'turn_turnspeed.md'
         - 'SetActPack': 'setactpack.md'
     - '-- Attack Functions --':
