Added more target funcs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
         - 'TargetEntByName (TBD)': 'TBD.md'
         - 'SendTarget2Caller (TBD)': 'TBD.md'
         - 'CheckTarget, CheckLOS': 'checktarget_checklos.md'
-        - 'ResetTarget, IgnoreTarget, SetTarget (TBD)': 'TBD.md'
+        - 'ResetTarget, IgnoreTarget, SetTarget': 'reset_ignore_settarget.md'
         - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetVehicle, TargetHostage, TargetCrosshair': 'targetfunctions.md'
         - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem': 'targetmemory.md'
         - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget': 'assisttarget_enemy.md'
