--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ nav:
         - 'SetSquad, SetSquadRelation, RemoveSquadRelation (TBD)': 'TBD.md'
         - 'RallySquad, DesertSquad (TBD)': 'TBD.md'
     - '-- Targeting Functions --':
-        - 'TargetEntByName (TBD)': 'TBD.md'
+        - 'TargetEntByName': 'targetentbyname.md'
         - 'SendTarget2Caller': 'sendtarget2caller.md'
         - 'CheckTarget, CheckLOS': 'checktarget_checklos.md'
         - 'ResetTarget, IgnoreTarget, SetTarget': 'reset_ignore_settarget.md'
