--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ nav:
     - '-- NPC Behavior Functions --':
         - 'Aim, Face (TBD)': 'TBD.md'
         - 'Snatch, Unsnatch (TBD)': 'TBD.md'
-        - 'Senses, LookAt, LookOut (TBD)': 'TBD.md'
+        - 'Senses, LookAt, LookOut': 'senses_lookat_lookout.md'
         - 'Crouch, Lean': 'crouch_lean.md'
         - 'Busy, Fear, Hate': 'busy_fear_hate.md'
         - 'Follow, PlayerFriendly': 'follow_playerfriendly.md'
