--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ nav:
         - 'Say': 'say.md'
         - 'EmitSound (TBD)': 'TBD.md'
         - 'Gesture, ResetGesture, ResetSequence (TBD)': 'TBD.md'
-        - 'Headblob (TBD)': 'TBD.md'
+        - 'Headblob': 'headblob.md'
         - 'NPC': 'NPC.md'
     - '-- NPC Behavior Functions --':
         - 'Aim, Face': 'aim_face.md'
