Added AngleTo, ItemType, Relation, and RelationTo pages, various grammar/formatting updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,16 +17,16 @@ nav:
     - '-- Object Categories --':
         - 'Manner': 'manner.md'
         - 'Faction': 'faction.md'
-        - 'ItemType (TBD)': 'TBD.md'
+        - 'ItemType': 'itemtype.md'
         - 'String (TBD)': 'TBD.md'
         - 'Timer (TBD)': 'TBD.md'
         - 'Object': 'object.md'
         - 'DistTo': 'distto.md'
-        - 'AngleTo (TBD)': 'TBD.md'
+        - 'AngleTo': 'angleto.md'
         - 'Visible': 'visible.md'
         - 'HasWeapon (TBD)': 'TBD.md'
-        - 'RelationTo (TBD)': 'TBD.md'
-        - 'Relation (TBD)': 'TBD.md'
+        - 'RelationTo': 'relationto.md'
+        - 'Relation': 'relation.md'
         - 'Name': 'name.md'
         - 'Ammo (TBD)': 'TBD.md'
         - 'Ignore (TBD)': 'TBD.md'
