--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,21 @@
+theme: readthedocs
 site_name: Postal3Script
 site_author: WhackJob Interactive
 site_description: Postal3Script
 copyright: Written by Kizoky and Pseudonym_Tim <br>© WhackJob Interactive 2022<br>ㅤ
-site_url: https://kizoky.github.io/postal3script
+site_url: https://whackjobint.github.io/postal3script
+markdown_extensions:
+    - toc:
+        permalink: 
+    - admonition
+    - attr_list
+    - def_list
+extra_css:
+    - css/extra.css
 nav:
     - '-- Postal3Script (WIP) --':
-        - 'What is Postal3Script?': 'index.md'
+        - 'Index': 'index.md'
+        - 'What is Postal3Script?': 'whatispostal3script.md'
         - 'Structure (TBD)': 'TBD.md'
         - 'States (TBD)': 'TBD.md'
         - 'Patterns (TBD)': 'TBD.md'
@@ -13,86 +23,86 @@ nav:
         - 'Events (TBD)': 'TBD.md'
         - 'Development/WIP Files': 'wipp3sfiles.md'
     - '-- Attribute Checking --':
-        - 'IfAttr, SetAttr, CheckAttr, ChangeAttr, RemoveAttr': 'attributes.md'
-        - 'Embedded Attributes': 'embedattributes.md'
+        - 'IfAttr, SetAttr, CheckAttr, ChangeAttr, RemoveAttr': 'attribchecking/attributes.md'
+        - 'Embedded Attributes': 'attribchecking/embedattributes.md'
     - '-- Object Categories --':
-        - 'Manner': 'manner.md'
-        - 'Faction': 'faction.md'
-        - 'ItemType': 'itemtype.md'
+        - 'Manner': 'objects/manner.md'
+        - 'Faction': 'objects/faction.md'
+        - 'ItemType': 'objects/itemtype.md'
         - 'String (TBD)': 'TBD.md'
         - 'Timer (TBD)': 'TBD.md'
-        - 'Object': 'object.md'
-        - 'DistTo': 'distto.md'
-        - 'AngleTo': 'angleto.md'
-        - 'Visible': 'visible.md'
-        - 'HasWeapon (TBD)': 'TBD.md'
-        - 'RelationTo': 'relationto.md'
-        - 'Relation': 'relation.md'
-        - 'Name': 'name.md'
+        - 'Object': 'objects/object.md'
+        - 'DistTo': 'objects/distto.md'
+        - 'AngleTo': 'objects/angleto.md'
+        - 'Visible': 'objects/visible.md'
+        - 'HasWeapon (TBD)': 'objects/TBD.md'
+        - 'RelationTo': 'objects/relationto.md'
+        - 'Relation': 'objects/relation.md'
+        - 'Name': 'objects/name.md'
         - 'Ammo (TBD)': 'TBD.md'
         - 'Ignore (TBD)': 'TBD.md'
         - 'Karma (TBD)': 'TBD.md'
-        - 'VoicePrefix': 'voiceprefix.md'
+        - 'VoicePrefix': 'objects/voiceprefix.md'
     - '-- State Functions --':
-        - 'State, Pattern, ExecutePattern': 'func_state_pattern_executepattern.md'
-        - 'Wait, WaitForEnd, Repeat': 'wait_waitforend_repeat.md'
-        - 'StateMatrix': 'statematrix.md'
-        - 'CallState, CallPattern': 'callstate_callpattern.md'
-        - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'activitypattern_funcs.md'
+        - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
+        - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
+        - 'StateMatrix': 'statefuncs/statematrix.md'
+        - 'CallState, CallPattern': 'statefuncs/callstate_callpattern.md'
+        - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'statefuncs/activitypattern_funcs.md'
     - '-- Misc Functions --':
         - 'Effect (TBD)': 'TBD.md'
         - 'FireEvent, FireEventEX, FireUser, FireInput, AreaEvent, EntFireUser, EntFireInput (TBD)': 'TBD.md'
         - 'Item, SpawnItem (TBD)': 'TBD.md'
-        - 'AddFluid': 'addfluid.md'
+        - 'AddFluid': 'miscfuncs/addfluid.md'
         - 'Anchor, TargetAnchor (TBD)': 'TBD.md'
     - '-- NPC Functions --':
-        - 'Say': 'say.md'
-        - 'EmitSound': 'emitsound.md'
+        - 'Say': 'npcfuncs/say.md'
+        - 'EmitSound': 'npcfuncs/emitsound.md'
         - 'Gesture, ResetGesture, ResetSequence (TBD)': 'TBD.md'
-        - 'Headblob': 'headblob.md'
-        - 'NPC': 'NPC.md'
+        - 'Headblob': 'npcfuncs/headblob.md'
+        - 'NPC': 'npcfuncs/NPC.md'
     - '-- NPC Behavior Functions --':
-        - 'Aim, Face': 'aim_face.md'
-        - 'Snatch, Unsnatch': 'snatch_unsnatch.md'
-        - 'Senses, LookAt, LookOut': 'senses_lookat_lookout.md'
-        - 'Crouch, Lean': 'crouch_lean.md'
-        - 'Busy, Fear, Hate': 'busy_fear_hate.md'
-        - 'Follow, PlayerFriendly': 'follow_playerfriendly.md'
-        - 'CatDervish': 'catdervish.md'
-        - 'StunOut': 'stunout.md'
-        - 'EnableGibs': 'enablegibs.md'
-        - 'EnterVehicle': 'entervehicle.md'
+        - 'Aim, Face': 'npcbehaviorfuncs/aim_face.md'
+        - 'Snatch, Unsnatch': 'npcbehaviorfuncs/snatch_unsnatch.md'
+        - 'Senses, LookAt, LookOut': 'npcbehaviorfuncs/senses_lookat_lookout.md'
+        - 'Crouch, Lean': 'npcbehaviorfuncs/crouch_lean.md'
+        - 'Busy, Fear, Hate': 'npcbehaviorfuncs/busy_fear_hate.md'
+        - 'Follow, PlayerFriendly': 'npcbehaviorfuncs/follow_playerfriendly.md'
+        - 'CatDervish': 'npcbehaviorfuncs/catdervish.md'
+        - 'StunOut': 'npcbehaviorfuncs/stunout.md'
+        - 'EnableGibs': 'npcbehaviorfuncs/enablegibs.md'
+        - 'EnterVehicle': 'npcbehaviorfuncs/entervehicle.md'
     - '-- Squad Functions --':
-        - 'SetSquad, SetSquadRelation, RemoveSquadRelation': 'setsquad_relation.md'
-        - 'RallySquad': 'rallysquad.md'
+        - 'SetSquad, SetSquadRelation, RemoveSquadRelation': 'squadfuncs/setsquad_relation.md'
+        - 'RallySquad': 'squadfuncs/rallysquad.md'
     - '-- Targeting Functions --':
-        - 'TargetEntByName': 'targetentbyname.md'
-        - 'SendTarget2Caller, SendCaller': 'sendtarget2caller_sendcaller.md'
-        - 'CheckTarget, CheckLOS': 'checktarget_checklos.md'
-        - 'ResetTarget, IgnoreTarget, SetTarget': 'reset_ignore_settarget.md'
-        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetVehicle, TargetHostage, TargetCrosshair': 'targetfunctions.md'
-        - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem': 'targetmemory.md'
-        - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget': 'assisttarget_enemy.md'
-        - 'Relationship': 'relationship.md'
+        - 'TargetEntByName': 'targetingfuncs/targetentbyname.md'
+        - 'SendTarget2Caller, SendCaller': 'targetingfuncs/sendtarget2caller_sendcaller.md'
+        - 'CheckTarget, CheckLOS': 'targetingfuncs/checktarget_checklos.md'
+        - 'ResetTarget, IgnoreTarget, SetTarget': 'targetingfuncs/reset_ignore_settarget.md'
+        - 'TargetEnemy, TargetPlayer, TargetCaller, TargetItem, TargetVehicle, TargetHostage, TargetCrosshair': 'targetingfuncs/targetfunctions.md'
+        - 'TargetToMem, TargetFromMem, CallerToMem, ClearMem': 'targetingfuncs/targetmemory.md'
+        - 'AssistTarget, AssistEnemy, ArrestTarget, BusyTarget': 'targetingfuncs/assisttarget_enemy.md'
+        - 'Relationship': 'targetingfuncs/relationship.md'
     - '-- Movement Functions --':
-        - 'Move, MoveToLean, MoveToTarget, MoveToTargetLKP': 'movement_funcs.md'
-        - 'FreeMovement, FreeMovementParams': 'freemovement.md'
-        - 'TravelByPathTrack': 'travelbypathtrack.md'
-        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea': 'sethint_area_leangroup_avoidarea.md'
-        - 'Turn, TurnSpeed': 'turn_turnspeed.md'
-        - 'SetActPack': 'setactpack.md'
+        - 'Move, MoveToLean, MoveToTarget, MoveToTargetLKP': 'movementfuncs/movement_funcs.md'
+        - 'FreeMovement, FreeMovementParams': 'movementfuncs/freemovement.md'
+        - 'TravelByPathTrack': 'movementfuncs/travelbypathtrack.md'
+        - 'SetHintGroup, SetAreaGroup, SetLeanGroup, AvoidProhibitedArea': 'movementfuncs/sethint_area_leangroup_avoidarea.md'
+        - 'Turn, TurnSpeed': 'movementfuncs/turn_turnspeed.md'
+        - 'SetActPack': 'movementfuncs/setactpack.md'
     - '-- Attack Functions --':
-        - 'Hit': 'hit.md'
-        - 'Push': 'push.md'
-        - 'Weapon, Reload, ThrowGrenade': 'weapon_reload_throwgrenade.md'
+        - 'Hit': 'attackfuncs/hit.md'
+        - 'Push': 'attackfuncs/push.md'
+        - 'Weapon, Reload, ThrowGrenade': 'attackfuncs/weapon_reload_throwgrenade.md'
     - '-- Mission Functions --':
-        - 'AttributeProgressBar': 'attributeprogressbar.md'
-        - 'MissionLog, MissionSave, MissionBriefing': 'missionlog_save_briefing.md'
-        - 'ShowMessage, ShowHint': 'showmessage_showhint.md'
-        - 'EndMission': 'endmission.md'
-        - 'PlayerKarma': 'playerkarma.md'
-        - 'PlayVideo': 'playvideo.md'
-        - 'OpenDialog': 'opendialog.md'
+        - 'AttributeProgressBar': 'missionfuncs/attributeprogressbar.md'
+        - 'MissionLog, MissionSave, MissionBriefing': 'missionfuncs/missionlog_save_briefing.md'
+        - 'ShowMessage, ShowHint': 'missionfuncs/showmessage_showhint.md'
+        - 'EndMission': 'missionfuncs/endmission.md'
+        - 'PlayerKarma': 'missionfuncs/playerkarma.md'
+        - 'PlayVideo': 'missionfuncs/playvideo.md'
+        - 'OpenDialog': 'missionfuncs/opendialog.md'
     - '-- Deleted Functions --':
         - 'ActBusy': 'actbusy.md'
         - 'Arm': 'arm.md'
@@ -108,4 +118,3 @@ nav:
         - 'n/a': 'TBD.md'
     - '-- Mission Script Files (Evil Path) --':
         - 'n/a': 'TBD.md'
-theme: readthedocs
