--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,7 @@ nav:
         - 'DistTo': 'objects/distto.md'
         - 'AngleTo': 'objects/angleto.md'
         - 'Visible': 'objects/visible.md'
-        - 'HasWeapon (TBD)': 'objects/TBD.md'
+        - 'HasWeapon (TBD)': 'TBD.md'
         - 'RelationTo': 'objects/relationto.md'
         - 'Relation': 'objects/relation.md'
         - 'Name': 'objects/name.md'
@@ -66,7 +66,7 @@ nav:
         - 'Snatch, Unsnatch': 'npcbehaviorfuncs/snatch_unsnatch.md'
         - 'Senses, LookAt, LookOut': 'npcbehaviorfuncs/senses_lookat_lookout.md'
         - 'Crouch, Lean': 'npcbehaviorfuncs/crouch_lean.md'
-        - 'Busy, Fear, Hate': 'npcbehaviorfuncs/busy_fear_hate.md'
+        - 'Busy, Hate': 'npcbehaviorfuncs/busy_hate.md'
         - 'Follow, PlayerFriendly': 'npcbehaviorfuncs/follow_playerfriendly.md'
         - 'CatDervish': 'npcbehaviorfuncs/catdervish.md'
         - 'StunOut': 'npcbehaviorfuncs/stunout.md'
@@ -104,10 +104,11 @@ nav:
         - 'PlayVideo': 'missionfuncs/playvideo.md'
         - 'OpenDialog': 'missionfuncs/opendialog.md'
     - '-- Deleted Functions --':
-        - 'ActBusy': 'actbusy.md'
-        - 'Arm': 'arm.md'
-        - 'HolsterWeapon': 'holsterweapon.md'
-        - 'DesertSquad': 'desertsquad.md'
+        - 'ActBusy': 'deletedfuncs/actbusy.md'
+        - 'Arm': 'deletedfuncs/arm.md'
+        - 'HolsterWeapon': 'deletedfuncs/holsterweapon.md'
+        - 'DesertSquad': 'deletedfuncs/desertsquad.md'
+        - 'Fear': 'deletedfuncs/fear.md'
     - '-- Mission Script Files (Pre-Path) --':
         - 'PDB (Paradise Bridge)': 'missions/pdb.md'
         - 'PW (Porn World)': 'missions/pw.md'
